--- a/package.json
+++ b/package.json
@@ -11,24 +11,36 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.12.2",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
-    "mongodb": "^6.14.1",
-    "mongoose": "^8.12.0",
-    "next": "15.2.0",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
+    "mysql2": "^3.12.0",
+    "next": "^15.2.4",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
-    "svix": "^1.61.2",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.54.2",
+    "sequelize": "^6.37.6",
+    "sequelize-typescript": "^2.1.6",
+    "svix": "^1.63.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.5.2",
-    "webpack": "^5.98.0"
+    "uploadthing": "^7.6.0",
+    "webpack": "^5.98.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -37,5 +49,22 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4.0.9",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wassim01jr/defilab.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/wassim01jr/defilab/issues"
+  },
+  "homepage": "https://github.com/wassim01jr/defilab#readme"
 }
